# fastapi-ddd-boilerplate

./: .pylintrc  LICENSE  README.md  lint.sh  pyproject.toml  setup.cfg
.github/workflows/: main.yml
