[tool.poetry]
name = "fastapi-ddd-boilerplate"
version = "0.1.0"
description = ""
authors = ["Victor Hugo Viana <torugosis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pylint = "^2.12.2"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-eradicate = "^1.2.0"
flake8-print = "^4.0.0"
vulture = "^2.3"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
